--- a/client/Front-end/package.json
+++ b/client/Front-end/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.20",
     "axios": "^1.6.2",
+    "planby": "^1.1.7",
     "react": "^18.2.0",
     "react-animated-heart": "^0.0.8",
     "react-dom": "^18.2.0",
