--- a/client/Front-end/package.json
+++ b/client/Front-end/package.json
@@ -14,10 +14,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.20",
     "axios": "^1.6.2",
+    "fuse.js": "^7.0.0",
+    "lodash.debounce": "^4.0.8",
     "planby": "^1.1.7",
     "react": "^18.2.0",
     "react-animated-heart": "^0.0.8",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.21.0",
     "uuid": "^9.0.1"
   },
@@ -25,10 +29,13 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.0.0"
   }
 }
