--- a/server/.env
+++ b/server/.env
@@ -1,10 +1,8 @@
-PORT=3005
-PGUSER=postgres
-PGHOST=localhost
-PGPASSWORD=markolol123
-PGDATABASE=recipe
-PGPORT=5432
-
+DB_USER=postgres
+DB_HOST=localhost
+DB_NAME=recipes
+DB_PASSWORD=mineturtle
+DB_PORT=5432
 
 
 
